--- a/indx.html
+++ b/indx.html
@@ -5,192 +5,210 @@
 	<title>index</title>
 	<style>
 	  * {
-	    padding: 0px;
-	    margin: 0px;
-	    scroll-behavior: smooth;
-	  }
-	
-	  body {
-	    font-family: Sans-Serif;
-	  }
-	  /*Nav*/
-	  nav {
-	    display: flex;
-	    background-color: #333A73;
-	    align-items: center;
-	    justify-content: space-between;
-	    padding: 10px;
-	    color: white;
-	    font-family: Product-sans;
-	    font-size: 15px;
-	    cursor: pointer;
-	  }
-	  .logo {
-	    padding: 10px;
-	    border-radius: 10px;
-	  }
-	  .logo:hover {
-	    transition: 1.1s;
-	    background-color: #0B60B0;
-	  }
-	  nav ul {
-	    list-style: none;
-	    display: flex;
-	
-	
-	  }
-	
-	  nav li a:hover {
-	    transition: 1.1s;
-	    background-color: #74E291;
-	
-	  }
-	  nav a {
-	    text-decoration: none;
-	    padding: 10px;
-	    color: white;
-	    border-radius: 8px;
-	  }
-	
-	  /*Section-hero*/
-	  .section-hero {
-	    width: 100%;
-	    height: 450px;
-	    background: #0B60B0;
-	    font-family: montserrat;
-	
-	  }
-	
-	  .section-hero h1 {
-	    display: block;
-	    padding-top: 10%;
-	    margin-left: 20%;
-	    font-size: 20px;
-	    color: white;
-	  }
-	
-	  .section-hero p {
-	    display: block;
-	    margin-left: 20%;
-	    font-size: 40px;
-	    font-weight: 500px;
-	    color: white;
-	    display: flex;
-	  }
-	
-	  .section-hero button {
-	    width: 80px;
-	    margin-left: 20%;
-	    height: 30px;
-	    font-size: 15px;
-	    font-family: montsserat;
-	    background-color: #74E291;
-	    border: none;
-	    border-radius: 10px;
-	    margin-top: 25px	;
-	    cursor: pointer;
-	    color: white;
-	    box-shadow: 16px;
-	  }
-	
-	  .section-hero button:hover {
-	    background-color: orangered;
-	    transition: 1s;
-	    box-shadow: 1rem;
-	  }
-	  .section-hero h3 {
-	    font-size: 15px;
-	    padding-left: 20%;
-	    padding-top: 20px;
-	    font-size: 20px;
-	    color: white;
-	  }
-	  .section-hero img {
-	    width: 300px;
-	    height: 340px;
-	    float: right;
-	    margin-right: 50px;
-	    border-radius: 20px;
-	    box-shadow: 40px 40px 40px rgba(0, 0, 0, 0.3);
-	    margin-top: 50px;
-	  }
-	  /*Section-main*/
-	  .section-main {
-	    width: 100%;
-	    height: 300px;
-	    background-color: #0B60B0;
-	    display: flex;
-	    flex-direction: column;
-	    align-items: center;
-	  }
-	  .section-main h1 {
-	    padding-top: 20px;
-	    text-align: center;
-	    color: white;
-	    font-family: product-sans;
-	    font-size: 25px;
-	
-	  }
-	  .section-main p {
-	    padding-top: 10px;
-	    text-align: center;
-	    font-family: product-sans;
-	    color: white;
-	    font-size: 20px;
-	  }
-	  .section-main img {
-	    width: 60px;
-	    height: 60px;
-	    display: column;
-	    color: white;
-	    padding-top: 10px;
-	  }
+  padding: 0px;
+  margin: 0px;
+  scroll-behavior: smooth;
+  }
 
-	  /*Section-portofolio*/
-	  .section-portofolio{
-		  width: 100%;
-		  height: 350px;
-		  background-color: #0B60B0;
-		  font-family: montserrat;
-		  align-items: center;
-	  }
-	.section-portofolio h1{
-		text-align: center;
-		color: whitesmoke;
-	  }
-	  .section-portofolio .content{
-		  display: flex;
-		  gap: 10px;
-	  }
-	  .section-portofolio .card-one{
-		  background-color:white;
-		  display: flex;
-	  }
-	  .section-portofolio img {
-		width: 60;	   
-		  height: 90px;
-	  }
-	  .section-portofolio .card-two{
-		  background-color: white;
-	  }
-	  /*section-question*/
-	  .section-question {
-	    width: 100%;
-	    height: 100px;
-	    background-color: #0B60B0;
-	    display: flex;
-	    align-items: center;
-	    flex-direction: column;
-	    font-family: montserrat;
-	    color: white;
-	  }
-	  .section-question judul {
-	    font-size: 15px;
-	    font-size: 25px;
-	    color: #00224D;
-	    
-	  }
-	  /*.section-question h3 {
+  body {
+  font-family: Sans-Serif;
+  }
+  /*Nav*/
+  nav {
+  display: flex;
+  background-color: #333A73;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  color: white;
+  font-family: Product-sans;
+  font-size: 15px;
+  cursor: pointer;
+  }
+  .logo {
+  padding: 10px;
+  border-radius: 10px;
+  }
+  .logo:hover {
+  transition: 1.1s;
+  background-color: #0B60B0;
+  }
+  nav ul {
+  ) list-style: none;
+  display: flex;
+  }
+  nav li a:hover {
+  transition: 1.1s;
+  background-color: #74E291;
+
+  }
+  nav a {
+  text-decoration: none;
+  padding: 10px;
+  color: white;
+  border-radius: 8px;
+  }
+
+  /*Section-hero*/
+  .section-hero {
+  width: 100%;
+  height: 450px;
+  background: #0B60B0;
+  font-family: montserrat;
+
+  }
+
+  .section-hero h1 {
+  display: block;
+  padding-top: 10%;
+  margin-left: 20%;
+  font-size: 20px;
+  color: white;
+  }
+
+  .section-hero p {
+  display: block;
+  margin-left: 20%;
+  font-size: 40px;
+  font-weight: 500px;
+  color: white;
+  display: flex;
+  }
+
+  .section-hero button {
+  width: 80px;
+  margin-left: 20%;
+  height: 30px;
+  font-size: 15px;
+  font-family: montsserat;
+  background-color: #74E291;
+  border: none;
+  border-radius: 10px;
+  margin-top: 25px;
+  cursor: pointer;
+  color: white;
+  box-shadow: 16px;
+  }
+
+  .section-hero button:hover {
+  background-color: orangered;
+  transition: 1s;
+  box-shadow: 1rem;
+  }
+  .section-hero h3 {
+  font-size: 15px;
+  padding-left: 20%;
+  padding-top: 20px;
+  font-size: 20px;
+  color: white;
+  }
+  .section-hero img {
+  width: 300px;
+  height: 340px;
+  float: right;
+  margin-right: 50px;
+  border-radius: 20px;
+  box-shadow: 40px 40px 40px rgba(0, 0, 0, 0.3);
+  margin-top: 50px;
+  }
+  /*Section-main*/
+  .section-main {
+  width: 100%;
+  height: 300px;
+  background-color: #0B60B0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  .section-main h1 {
+  padding-top: 20px;
+  text-align: center;
+  color: white;
+  font-family: product-sans;
+  font-size: 25px;
+
+  }
+  .section-main p {
+  padding-top: 10px;
+  text-align: center;
+  font-family: product-sans;
+  color: white;
+  font-size: 20px;
+  }
+  .section-main img {
+  width: 60px;
+  height: 60px;
+  display: column;
+  color: white;
+  padding-top: 10px;
+  }
+
+  /*Section-portofolio*/
+  .section-portofolio{
+  width: 100%;
+  height: 350px;
+  background-color: #0B60B0;
+  font-family: montserrat;
+  align-items: center;
+  }
+  .section-portofolio h1{
+  text-align: center;
+  color: whitesmoke;
+  }
+  .section-portofolio .content{
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 10px;
+  }
+section-portofolio
+  .section-portofolio img {
+  width: 90px;
+  height: 90px;
+  }
+  .section-portofolio .card-one{
+  background-color: white;
+  width: 90px;
+  border-radius: 10px;
+  }
+  .section-portofolio .card-one:hover{
+    height: 80px;
+    transition: smooth;
+  }  
+  .section-portofolio .card-two{
+  background-color: white;
+  width: 90px;
+  border-radius: 10px;
+  }
+  .section-portofolio .card-three{
+  background-color: white;
+  width: 90px;
+  border-radius: 10px;
+  }
+  .section-portofolio .card-four{
+  background-color: white;
+  width: 90px;
+  border-radius: 10px;
+  }
+  /*section-question*/
+  .section-question {
+  width: 100%;
+  height: 100px;
+  background-color: #0B60B0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: montserrat;
+  color: white;
+  }
+  .section-question judul {
+  font-size: 15px;
+  font-size: 25px;
+  color: #00224D;
+
+  }
+  /*.section-question h3 {
 	    padding-top: 15px;
 	    font-size: 18px;
 	    text-align: center;
@@ -208,36 +226,38 @@
 	    text-align: center;
 	    font-weight: 900;
 	  }*/
-		.section-question button {
-			height: 35px;
-			margin-top: 15px;
-			width: 100px;
-			font-size: 15px;
-			font-weight: 900px;
-			border-radius: 8px;
-			border: none;
-			font-family: montsserat;
-			color:white;
-	    		background-color: #74E291;
-		}	
-		.section-question button:hover{
-	    		background-color: orangered; 
-			transition: 1.1s;
-			cursor: pointer;
-		}
-			span{ 
-			color: coral;
-			}
-			footer {
-			display: flex;
-			justify-content: center;
-			height: 30px;
-			width: 100%;
-			background-color: #74E291;
-			align-items: center;
-			font-family: produt-sans;
-			font-size: 10px;
-			}
+  .section-question button {
+  height: 35px;
+  margin-top: 15px;
+  width: 100px;
+  font-size: 15px;
+  font-weight: 900px;
+  border-radius: 8px;
+  border: none;
+  font-family: montsserat;
+  color: white;
+  background-color: #74E291;
+  }
+  .section-question button:hover{
+  background-color: orangered;
+  transition: 1.1s;
+  cursor: pointer;
+  }
+  span{
+  color: coral;
+  }
+  footer {
+  display: flex;
+  justify-content: center;
+  height: 30px;
+  width: 100%;
+  background-color: #74E291;
+  align-items: center;
+  font-family: produt-sans;
+  font-size: 10px;
+  }
+
+</style>
 	
 	</style>
 	</head>
