--- a/indx.html
+++ b/indx.html
@@ -166,7 +166,12 @@
   }
   .section-portofolio img {
   width: 90px;
-  height: 90px;
+  height: 100px;
+  border-radius: 10px;
+  }
+  .section-portofolio img:hover{
+    height: auto;
+    transition: ;
   }
   .section-portofolio .card-one{
   background-color: white;
@@ -175,8 +180,7 @@
   }
   .section-portofolio .card-one:hover{
 	transform: scale(1.4);
-    transition: smooth;
-
+  transition: 1.1s;
   }  
   .section-portofolio .card-two{
   background-color: white;
@@ -303,11 +307,10 @@
 		<h1>My portofolio</h1>
 	<div class="card">
 		<div class="card-one">
-		<img src="" alt="" class="1" >
+		<img src="poster donor darah.PNG" alt="" class="1" >
 		<div class="content">
 		<h3>Lorem</h3>
-		<p>
-		Lorem ipsum dolor sit amet, </p>	
+		<p>Lorem ipsum dolor sit amet, </p>	
 		</div>  
 		</div>
 
